# parallel-financial-analytics

./: .gitignore  CMakeLists.txt  Parallel Financial Analytics Engine Summary .md  README.md  main.cpp  report.html  run.sh
include/: analytics.h  data_loader.h  data_partitioner.h  mpi_engine.h  omp_engine.h  performance.h  report_generator.h  result_io.h  transaction.h
src/: analytics.cpp  data_loader.cpp  data_partitioner.cpp  mpi_engine.cpp  omp_engine.cpp  performance.cpp  report_generator.cpp  result_io.cpp
